# cocoon

./: .gitignore  README.md  dispatch.yaml  gitignore  libs  package.json  poe_tasks.yaml
.idx/: dev.nix
backend/: .gcloudignore  app.yaml  env_local.py  env_prodtest.py  launchlocal  pyproject.toml  requirements.txt
backend/cocoon/: __init__.py  main.py  settings.py  tst_endpoints.py
backend/cocoon/adhoc/: __init__.py  participant.py
backend/cocoon/attendee/: __init__.py  api_attendee.py  attendee.py  md_attendee.py
backend/cocoon/core/: common.py  counter.py  mail.py  mailbackend.py
backend/cocoon/page/: __init__.py  api_page.py  page.py
backend/cocoon/participant/: __init__.py  api_participant.py  md_participant.py  participant.py
backend/cocoon/paymentrequest/: __init__.py  api_paymentrequest.py  md_paymentrequest.py  paymentrequest.py
backend/cocoon/registration/: __init__.py  api_registration.py  md_registration.py  registration.py
backend/cocoon/scripts/: i18n.py
backend/cocoon/statamic/: __init__.py  api_statamic.py  md_statamic.py  statamic.py
backend/cocoon/templates/: mailregistration_en.md  markdown.css  pr_hotel.md  pr_part_mail.md  pr_part_vk_mail_en.md  printbadge_vk.j2  printnamecard_bjk.j2  printnamecard_vk.j2  printprize_bjk.j2  testmail.html
backend/cocoon/tournament/: __init__.py  api_tournament.py  md_tournament.py  tournament.py
backend/cocoon/wagtail/: __init__.py  api_wagtail.py  wagtail.py
backend/libs/: reddevil-3.3.7-py3-none-any.whl  reddevil-3.3.8-py3-none-any.whl  reddevil-3.4.0-py3-none-any.whl  reddevil-3.4.1-py3-none-any.whl  reddevil-3.4.2-py3-none-any.whl  reddevil-3.4.5-py3-none-any.whl
backend/static/css/: badge.css  catcolors.css  namecard.css  prize.css
cms/: pyproject.toml
cms/cocooncms/: urls.py  wsgi.py
cms/cocooncms/search/: views.py
cms/cocooncms/settings/: base.py  production.py
cocooncms/: manage.py  pyproject.toml
cocooncms/cocooncms/: urls.py  wsgi.py
cocooncms/cocooncms/settings/: base.py  dev.py
cocooncms/content/migrations/: 0001_initial.py  0002_contentpage.py
frontend/: .gcloudignore  app.yaml  nuxt.config.js  package.json
frontend/api/: accounts.js  attendee.js  page.js  participant.js  payment.js  registration.js  tournament.js  wagtail.js
frontend/components/: AdCarousel.vue  ProgressLoading.vue  SnackbarMessage.vue  TheFooter.vue
frontend/components/registration/: confirmation.vue  details.vue  gdpr.vue  idnumber.vue  intro.vue  photo.vue
frontend/composables/: useMarkdown.js
frontend/layouts/: default.vue  mgmt.vue  nocarousel.vue
frontend/pages/: activities.vue  index.vue  participants.vue  playing-schedule.vue  registration.vue  rules.vue  sponsors.vue  stay.vue  venue.vue
frontend/pages/mgmt/: index.vue  logout.vue  overview.vue  pages.vue  participant_edit.vue  participants.vue  paymentrequest_edit.vue  paymentrequests.vue  registration_edit.vue  registrations.vue
frontend/plugins/: backend.js
frontend/public/css/: cocoon.css
frontend/public/js/: redirect.js
frontend/utils/: constants.js  swarjson.js
shared/cloud/pages/: activities.md  cocoon.md  playing-schedule.md  rules.md  sponsors.md
shared/data/: i18n - all.csv
