[project]
name = "cocoon"
version = "1.2.0"
description = "Cocoon backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncssh>=2.21.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "reddevil",
    "toml>=0.10.2",
]

[tool.uv.sources]
reddevil = { path = "libs/reddevil-3.4.1-py3-none-any.whl" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E402"]
