[tool.poetry]
name = "cocooncms"
version = "0.1.0"
description = ""
authors = ["Ruben Decrop <ruben@chessdevil.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
wagtail = "^6.4.1"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
